# nbdev-api-template

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  index.ipynb  pyproject.toml  pytest.ini  requirements.txt  settings.ini  test_nbdev.ipynb
.github/workflows/: codeql-analysis.yml
docs/: _config.yml  index.html  test_nbdev.html
docs/_data/: topnav.yml
myapi/: _nbdev.py  main.py
nbdev/: build_lib.py
tests/: test_package_name.py  test_slow.py
