[tool.poetry]
name = "myapi"
version = "0.0.1"
description = "API Template"
authors = ["Igor Brigadir <igor.brigadir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.7.1"
pylint = "^2.6.0"
nbdev = "^1.1.5"
uvicorn = "^0.11.8"
fastapi = "^0.61.1"

[tool.poetry.scripts]
start = "main:main"

[tool.nbdev.extra]
nbdevlib = "test"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
