[tool.poetry]
name = "myapi"
version = "0.0.1"
description = "API Template"
authors = ["Igor Brigadir <igor.brigadir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.7.1"
pylint = "^2.6.0"
nbdev = "^1.1.5"
uvicorn = "^0.11.8"
fastapi = "^0.61.1"

[tool.poetry.scripts]
start = "main:main"

[tool.nbdev.extra]
nbdevlib = "test"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

###############################################################
# nbdev config:
[DEFAULT]
# All sections below are required unless otherwise specified
# Project Specific:
lib_name = "myapi"
git_url = "https://github.com/recsyslabs/s7/tree/master/"
lib_path = "myapi"
title = "myapi"
doc_baseurl = "/myapi/"

# Optional:
user = "recsyslabs"
description = "Services"
keywords = "recsys"
author = "Igor Brigadir"
author_email = "igor@recsyslabs.com"

# Default:
copyright = "recsyslabs"
branch = "master"
version = "0.0.1"
min_python = "3.8"
audience = "Developers"
language = "English"
custom_sidebar = false
license = "apache2"
status = 2
nbs_path = "."
host = "github"
doc_host = "https://recsyslabs.github.io"
doc_path = "docs"
