[tool.poetry]
name = "myapi"
version = "0.0.1"
description = "API Template"
authors = ["Igor Brigadir <igor.brigadir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^3.9.2"
pre-commit = "^2.15"
pylint = "^2.11.1"
nbdev = "^1.1.22"
uvicorn = "^0.15"
fastapi = "^0.68.1"

[tool.poetry.scripts]
start = "main:main"

[tool.nbdev.extra]
nbdevlib = "test"

[build-system]
requires = ["poetry>=1.1.10"]
build-backend = "poetry.masonry.api"
